[gd_scene load_steps=5 format=3 uid="uid://07m5yesokano"]

[ext_resource type="Script" path="res://scripts/PlayMenu.gd" id="1_qkxw6"]
[ext_resource type="Texture2D" uid="uid://dwx5qqqmj43qs" path="res://assets/menu/play_menu.png" id="2_cretc"]
[ext_resource type="Theme" uid="uid://bncx8ccsmusd0" path="res://ui/ButtonTheme.tres" id="3_n8o1x"]
[ext_resource type="Texture2D" uid="uid://cmmfy86r88xr6" path="res://assets/menu/button1.png" id="3_tskqo"]

[node name="Play Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qkxw6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -479.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_cretc")
expand_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
alignment = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 20

[node name="New Game" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_n8o1x")
theme_override_font_sizes/font_size = 26
text = "New Game"

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_tskqo")
stretch_mode = 0

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_n8o1x")
theme_override_font_sizes/font_size = 26
text = "Settings"

[node name="TextureButton4" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_tskqo")
stretch_mode = 0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_n8o1x")
theme_override_font_sizes/font_size = 22
text = "Credits
"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_n8o1x")
theme_override_font_sizes/font_size = 22
text = "Exit
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
